# matxin

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  es-eu.cfg  es-eu.cfg.in  eseu_chunk_type.txt  eseu_verb_transfer.fst  eu_changes_morph.xml  eu_changes_sint.txt  eu_changes_sint.xml  eu_morph_nolex.xml  eu_sem.txt  eu_sem.xml  eu_verb_subcat.txt  fo-en-unsupervised.make  matxin-fo-en.en.dix  matxin-fo-en.en.inter1  matxin-fo-en.en.tsx  matxin-fo-en.en_sem.dix  matxin-fo-en.fo-en.cfg  matxin-fo-en.fo-en.chunk_type  matxin-fo-en.fo-en.dep.rlx  matxin-fo-en.fo-en.dis.rlx  matxin-fo-en.fo-en.dix  matxin-fo-en.fo-en.inter1  matxin-fo-en.fo-en.intra1  matxin-fo-en.fo-en.rlx  matxin-fo-en.fo.dep  matxin-fo-en.fo.dix  matxin-fo-en.fo.gram  matxin-fo-en.fo.locu  matxin-fo-en.fo.relax  (+5 more)
data/: Makefile.am
data/config/: Makefile.am  en-eu.cfg  es-eu.cfg
data/dict/en-eu/: Makefile.am  eneu_chunk_type.txt  eneu_mur.xml  eneu_prep.txt  eu_changes_morph.xml  eu_measures_gen.xml  eu_morph_nolex.xml  eu_verb_subcat.txt
data/dict/es-eu/: Makefile.am  changes_morph.xml  eseu_chunk_type.txt  eseu_lex.txt  eseu_mur.xml  eseu_prep.txt  eu_changes_morph.xml  eu_measures_gen.xml  eu_sem.txt  eu_verb_subcat.txt
data/dict/eu/: Makefile.am
data/freeling/: Makefile.am
data/freeling/common/: Makefile.am  wn16.db  wn16.src
data/freeling/common/corrector/: Makefile.am  corrector.sampa
data/freeling/common/nec/: Makefile.am
data/freeling/en/: Makefile.am  dicc.src  senses16.src
data/freeling/en/chunker/: Makefile.am
data/freeling/en/corrector/: Makefile.am
data/freeling/en/dep/: Makefile.am  compl.dicc  interseccio.2xtr.suj+sub-that.dicc
data/freeling/en/dictionary/: adjs  adjs.comp  adv  adv.comp  contraccions  extra  interj  noms  numbers.DT  tanc  verbs  verbs.aux
data/freeling/en/nec/: Makefile.am  nec.abm  nec.lex  nec.rgf  nec.svm
data/freeling/en/ner/: Makefile.am  ner.abm  ner.rgf
data/freeling/es/: Makefile.am  senses16.db  senses16.src  senses30.src
data/freeling/es/chunker/: Makefile.am
data/freeling/es/coref/: Makefile.am  coref.abm
data/freeling/es/corrector/: Makefile.am  corrector.rules
data/freeling/es/dep/: Makefile.am
data/freeling/es/dictionary/: MM.adj  MM.adv  MM.int  MM.matxin  MM.nom  MM.tanc  MM.vaux
data/freeling/es/nec/: Makefile.am  nec.rgf
data/freeling/es/ner/: Makefile.am  ner.abm  ner.rgf
data/gram/: Makefile.am
data/gram/en-eu/: Makefile.am  eneu_verb_transfer.foma  eneu_verb_transfer.fst  verb_transfer.foma
data/gram/es-eu/: Makefile.am  eseuVerbTransfer.foma  eseu_verb_transfer.foma  eseu_verb_transfer.fst  verb_transfer.foma  verb_transfer.fst
data/gram/eu/: Makefile.am
dev/: convert-CG.el  test_phrases.txt
dev/current-CG/: README  fao-dis.rle
dev/tests/: README  environment.sh.in  run-tests.sh
dev/tests/001_xfer-lex_chunktype/: input.xml  run-test.sh
dev/tests/002_xfer-lex_seminfo/: expected_output.xml  run-test.sh
dev/tests/003_xfer-intra_headpos/: expected_output.xml  input.xml  run-test.sh
doc/: opentrad-diseno-2006.sxw
freeling/: Makefile.am
freeling/corrector/: Makefile.am  corrector.rules
freeling/dep/: Makefile.am
src/: Analyzer.cc  IORedirectHandler.cc  IORedirectHandler.hpp  LT.cc  MG.cc  Makefile.am  SG_inter.cc  SG_intra.cc  SG_move.cc  ST_inter.cc  ST_intra.cc  ST_prep.cc  ST_verb.cc  XML_reader.cc  XML_reader.h  add_definite_article.py  config.h  data_manager.cc  data_manager.h  deformat.xsl  fst2regex.pl  gen_Matxin_translator.sh  gen_fst2regex.sh  html-format.xml  intochunk_dep.txt  matxin-header.sh  matxin_gen_inter.cc  matxin_gen_intra.cc  matxin_gen_morph.cc  matxin_reformat.cc  matxin_string_utils.cc  matxin_string_utils.h  matxin_xfer_inter.cc  matxin_xfer_intra.cc  matxin_xfer_lex.cc  matxin_xfer_prep.cc  matxin_xfer_verb.cc  matxinasynbase.py  matxinclient.py  matxinserver.py  (+12 more)
