SUBDIRS = dep nec ner corrector

freelingesdir = $(pkgdatadir)/freeling
freelinges_DATA =  constr_gram.dat \
                   dicc.src.gz \
                   grammar.dat \
                   grammar-dep.dat \
                   grammar-full.dat \
                   grammar.lemastemp \
                   locucions.dat \
                   np.dat \
                   probabilitats.dat \
                   quantities.dat \
                   senses16.db \
                   senses16.src \
                   splitter.dat \
                   afixos.dat \
                   tagger.dat \
                   tags.dat \
                   tokenizer.dat
